(melange.emit
 (target generated)
 (libraries reason-react melange.belt feed)
 (promote (until-clean))
 (preprocess
  (pps melange.ppx reason-react-ppx))
 (module_systems es6))

(rule
 (mode promote)
 (target EpisodeHistory.ml)
 (deps ../bin/generate_episodes.exe ../data/rss.xml)
 (action
  (with-stdout-to
   %{target}
   (run %{deps}))))
